doom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doom
  namespace: olehalv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doom
  template:
    metadata:
      labels:
        app: doom
    spec:
      containers:
        - name: doom
          image: kasmweb/doom:1.17.0
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              memory: 1024Mi
