doom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doom
  namespace: olehalv
spec:
  type: ClusterIP
  selector:
    app: doom
  ports:
    - name: web
      port: 80
      targetPort: http
